# keipes-ai-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PHASE2_SUMMARY.md  README.md  architecture.puml  build.rs  cdk.json  docker-compose.yml  docker.sh  go.mod  justfile  my_flamegraph.svg_1  nginx.conf  package-lock.json  package.json  plan.json  run-dev.sh  stress_test.py  test.db  test_redb_batch.rs  text.txt  tsconfig.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
config/: development.json  mcp-config.ts  production.json
docs/: api.md  architecture.md  deployment.md
infrastructure/: app.ts  cdk.json  go.mod  go.sum  main.go  stack.go
infrastructure/constructs/: api-gateway.ts  lambda-function.ts
infrastructure/stacks/: api-stack.ts  mcp-stack.ts  storage-stack.ts
lambda/: Makefile  build.sh
rmcp-reference-source-copy/: README.md
schemas/: sec.fbs  test.fbs
scripts/: build.ts  deploy.sh  deploy.ts  install-certs.sh  local-dev.sh  profile.sh  test.sh
scripts/systemd/: keipes-ai-mcp.service
src/: index.ts  lib.rs  logs.rs  main.go  main.rs  mcp.go  mcp.rs  types.go  types.rs
src/client/: main.rs  mod.rs
src/common/: app_env.rs  metrics.rs  mod.rs
src/conn/: mod.rs  session.rs  track.rs  transport.rs
src/handlers/: bf2042_tools.rs  http.go  lambda.go  mcp-handler.ts  mod.rs  prompt_handler.rs  resource_handler.rs  resources-handler.ts  server.rs  tool_handler.rs  tools-handler.ts
src/mcp/: protocol.ts  server.ts  transport.ts
src/resources/: example_resource.go  file-system.ts  index.ts  registry.go  web-content.ts
src/server/: mcp.rs  mod.rs
src/session/: cache.rs  id.rs  mod.rs
src/storage/: README.md  TEST_RESULTS.md  builder.rs  config.rs  core.rs  error.rs  example.rs  flatbuffers_integration.rs  flatbuffers_test.rs  generated_schema_test.rs  integration_tests.rs  mod.rs  pseudo-impl-2.md  pseudo-impl-3-simple.md  pseudo-impl-3-unified.md  pseudo-impl-3.md  pseudo-impl-4.md  pseudo-impl-5.md  pseudo-impl-6.md  pseudo-impl-7-core.md  pseudo-impl.md  redb_backend.rs  serializers.rs  simple_test.rs  table.rs  test_monster.fbs  test_monster_generated.rs  typed_table.rs
src/storage/backends/: mod.rs  redb.rs
src/storage/formats/: flatbuffers.rs  mod.rs  rkyv.rs
src/storage/table/: guards.rs  mod.rs  stream.rs
src/tools/: calculator.ts  edgar.rs  example_tool.go  index.ts  mod.rs  registry.go  rustdoc.rs  sec.rs  weather.ts
src/types/: aws.ts  mcp-sdk.ts  mcp.ts
src/utils/: logger.ts  validation.ts
test/: calculator.test.ts
tests/: integration_test.rs  storage_integration.rs
