[package]
name = "keipes-ai-mcp"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
rmcp = { path = "../rust-sdk/crates/rmcp",  features = ["auth", "client", "transport-streamable-http-client", "transport-streamable-http-server"] }

# rmcp-macros = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
rustls = "0.23.29"
anyhow = "1.0"
console-subscriber = "0.4.1"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "http2"] }

# [lib]
# name = "keipes_ai_mcp"
# path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dev-dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["charset", "http2", "json", "system-proxy"], default-features = false }
