[package]
name = "keipes-ai-mcp"
version = "0.1.0"
edition = "2021"
default-run = "main"

[features]
default = []
dhat-heap = ["dhat"]

[dependencies]
rmcp = { path = "../rust-sdk/crates/rmcp", features = [
    "auth",
    "client",
    "transport-streamable-http-client",
    "transport-streamable-http-server",
] }

# rmcp-macros = "0.3"
tokio = { version = "1.47.1", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.142"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15.7"
rustls = "0.23.29"
anyhow = "1.0"
console-subscriber = "0.4.1"
reqwest = { version = "0.12", default-features = false, features = [
    # "native-tls",
    "http2",
] }

# hyper-tls = { version = "0.6.0", default-features = false, features = [
#     "rustls-tls",
# ] }
hyper = { version = "1.6.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.16" }
bytes = "1.10.1"
http-body-util = "0.1.3"
parking_lot = "0.12.0"
thiserror = "2.0.12"
uuid = "1.17.0"
dashmap = "6.1.0"
lru = "0.16.0"
moka = { version = "0.12.10", features = ["future", "sync"] }
opool = "0.1.1"
http-body = "1.0.1"
tokio-stream = "0.1.17"
dhat = { version = "0.3", optional = true }
redb = "2.6.2"
sec_edgar = "1.0.5"
sec_lib = { git = "https://github.com/keipes/sec_lib.git", version = "0.1.0" }
rkyv = "0.8.11"
flatbuffers = "24.3.25"

# [lib]
# name = "keipes_ai_mcp"
# path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dev-dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = [
    "charset",
    "http2",
    "json",
    "system-proxy",
], default-features = false }
tempfile = "3.0"
